# sysY-UB-checker

./: .gitignore  .gitmodules  CMakeLists.txt  lib.cpp  main.cpp  main.hpp  readme.md  run.sh
include/: lib.h
test/: ast1.cpp  cpp-test.cpp  test0-err.cpp  test1-err.cpp  test10-pointer-err.cpp  test2-err.c  test2-err.cpp  test3-err.cpp  test4-err.cpp  test5-graph-err.cpp  test5-graph-right.cpp  test6-initializer-err.cpp  test7-recursive-err.cpp  test8-loop-err.cpp  test9-andor-err.cpp
